--- a/index.html
+++ b/index.html
@@ -1,56 +1,23 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <link rel="stylesheet" type="text/css" href="styles.css">
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Your Name - Portfolio</title>
+    <title>Dheeraj Nalapat - Portfolio</title>
+    <link rel="stylesheet" type="text/css" href="styles.css">
     <style>
-        body {
-            font-family: Arial, sans-serif;
-            background-color: #f4f4f4;
-            margin: 0;
-            padding: 0;
-        }
-        header {
-            background-color: #333;
-            color: #fff;
-            text-align: center;
-            padding: 20px;
-        }
-        header h1 {
-            margin: 0;
-        }
-        nav {
-            background-color: #444;
-            text-align: center;
-        }
-        nav ul {
-            list-style: none;
-            padding: 0;
-        }
-        nav ul li {
-            display: inline;
-            margin-right: 20px;
-        }
-        .container {
-            max-width: 960px;
-            margin: 20px auto;
-            padding: 20px;
-            background-color: #fff;
-        }
-        .container h2 {
+        /* Additional CSS for icons */
+        .contact-icon {
             font-size: 24px;
-        }
-        .container p {
-            font-size: 16px;
+            margin-right: 5px;
         }
     </style>
 </head>
 <body>
     <header>
-        <h1>Your Name</h1>
-        <p>Software Developer</p>
+        <h1>Dheeraj Nalapat</h1>
+        <p>Enthusiastic Computer Science and Engineering student with a passion for software development.<br>
+        Experienced in team leadership, AI/ML, and problem-solving. Eager to apply expertise in dynamic environments.</p>
     </header>
     <nav>
         <ul>
@@ -61,18 +28,30 @@
     </nav>
     <div class="container" id="about">
         <h2>About Me</h2>
-        <p>Write a brief introduction about yourself here.</p>
+        <p>Enthusiastic Computer Science and Engineering student with a passion for software development.<br>
+            Experienced in team leadership, AI/ML, and problem-solving. Eager to apply expertise in dynamic environments.</p>
     </div>
     <div class="container" id="portfolio">
         <h2>Portfolio</h2>
-        <!-- Add your portfolio items here -->
-        <p>Project 1: Description and link</p>
-        <p>Project 2: Description and link</p>
+        <p><strong>Parkinson's Disease Detection using Machine Learning (Ensemble Learning)</strong></p>
+        <p>Mini project for sixth semester [Backend: Django, Frontend: HTML, CSS]</p>
+        <p>Project consisted of a voice-based SVM model and handwritten Spirals-based CNN model; the outputs were combined with a Logistic Regression model to enhance the current detection of PD.</p>
+
+        <p><strong>Text File to Handwritten Notes Converter</strong></p>
+        <p>Hobby project [Backend: Flask, Frontend: HTML, CSS]</p>
+        <p>Software converts text files to handwritten note images. The project is tested in Python Notebook (Google Colab).</p>
+
+        <p><strong>Project PANDORA (Project Lead)</strong></p>
+        <p>Large scale TECHFEST PROJECT [Arduino, Sensors, Actuators]</p>
+        <p>Project was aimed at creating the world of Pandora from the movie AVATAR for people to experience. The world consisted of various interactive plants and living beings, including the "Tree of Souls.” The project was recognized in newspapers and various TV channels.</p>
     </div>
     <div class="container" id="contact">
         <h2>Contact Me</h2>
-        <p>Email: your.email@example.com</p>
-        <p>Phone: (123) 456-7890</p>
+        <p><span class="contact-icon">&#128187;</span>Email: <a href="mailto:dheerajnalapat3@gmail.com">dheerajnalapat3@gmail.com</a></p>
+        <p><span class="contact-icon">&#9742;</span>Phone: <a href="tel:+919656562246">+91 9656562246</a></p>
+        <p><span class="contact-icon">&#62217;</span>GitHub: <a href="https://github.com/Dheeraj-Nalapat" target="_blank">https://github.com/Dheeraj-Nalapat</a></p>
+        <p><span class="contact-icon">&#62234;</span>LinkedIn: <a href="https://www.linkedin.com/in/dheeraj-nalapat" target="_blank">https://www.linkedin.com/in/dheeraj-nalapat</a></p>
+        <p><span class="contact-icon">&#127760;</span>Portfolio Website: <a href="http://Dheeraj-Nalapat.github.io/Dheeraj_Nalapat" target="_blank">http://Dheeraj-Nalapat.github.io/Dheeraj_Nalapat</a></p>
     </div>
 </body>
 </html>
